# SplineMeshes

./: .gitignore  1split.ply  CMakeLists.txt  Makefile  Mesh.cpp  Mesh.hpp  QuantitiesOfInterest.cpp  QuantitiesOfInterest.hpp  README.md  SplineMesh.hpp  Splines.hpp  SubEdgeTree.hpp  SubFaceTree.cpp  SubFaceTree.hpp  Types.hpp  conanfile.txt  lean_vtk.cpp  main.cpp  visualize.py
cmake/: CompilerWarnings.cmake
tests/: CMakeLists.txt  tests.cpp  testsVertices.cpp
unittests/: Makefile  run_coverage.sh  test_split.cpp
